# diet-app

./: .gitignore  PRD.md  README.md  TRANSLATION_GUIDE.md  Weight.xlsx  auto_translate_pages.py  pyproject.toml  requirements.txt  run.sh  start.sh  stop.sh  translate_pages.py  update_i18n.py
.streamlit/: config.toml
app/: main.py
app/pages/: 1_📝_Daily_Entry.py  2_📊_History.py  3_📈_Dashboard.py  4_📊_KPIs.py  5_🚩_Red_Flags.py  6_🔮_Forecast.py  7_📤_Export.py  8_🤖_AI_Insights.py  9_🔬_Pattern_Analysis.py
core/: export.py  forecast.py  i18n.py  importer.py  kpi_engine.py  metrics.py  pdf_export.py  red_flags.py  schemas.py  storage.py
core/llm/: __init__.py  benchmark.py  client.py  narration.py  qa_engine.py
core/ml/: __init__.py  holidays.py  patterns.py  temporal_features.py  visualizations.py
docs/: BLOK_10_COMPLETE.md  BLOK_7_COMPLETE.md  BLOK_8_COMPLETE.md  BLOK_9_COMPLETE.md
tests/: test_export.py  test_forecast.py  test_importer.py  test_kpi_golden.py  test_llm.py  test_metrics_golden.py  test_ml_patterns.py  test_pdf_export.py  test_red_flags.py  test_smoke.py  test_storage.py  test_visualizations.py
