[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diet-app"
version = "0.1.0"
description = "CFO-grade diet and training tracker (offline-first)"
authors = [{name = "Grzegorz Hankus"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*"]
exclude = ["tests*"]
